# mongo-sharding

./: mongoDB_init.py  network.tf  outputs.tf  pyproject.toml  router.tf  shards.tf  utils.py  variables.tf
ansible-playbooks/: hosts.ini  mongo-install.yml  setup.yml
ansible-playbooks/templates/: mongod.conf.j2  mongod_shard.conf.j2  mongos.conf.j2
roles/config-server-setup/defaults/: main.yml
roles/config-server-setup/handlers/: main.yml
roles/config-server-setup/tasks/: main.yml
roles/config-server-setup/tests/: test.yml
roles/config-server-setup/vars/: main.yml
roles/router-setup/defaults/: main.yml
roles/router-setup/handlers/: main.yml
roles/router-setup/tasks/: main.yml
roles/router-setup/tests/: test.yml
roles/router-setup/vars/: main.yml
roles/shards-setup/defaults/: main.yml
roles/shards-setup/handlers/: main.yml
roles/shards-setup/tasks/: main.yml
roles/shards-setup/tests/: test.yml
roles/shards-setup/vars/: main.yml
terraform/: instances.tf  outputs.tf  provider.tf  variables.tf
